--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: 💻✒️📄🌟
 description: Vagia Chouchouli's CV
 show_downloads: 'true'
 docs:
-  pdf_url: 'docs/CV - Vagia Chouchouli - 2023.pdf'
-  doc_url: 'docs/CV - Vagia Chouchouli - 2023.doc'
-  odt_url: 'docs/CV - Vagia Chouchouli - 2023.odt'
+  pdf_url: 'docs/CV_Chouchouli Vaia.pdf'
+  doc_url: 'docs/CV_Chouchouli Vaia.doc'
+
