--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 theme: jekyll-theme-minimal
 title: 💻✒️📄🌟
-description: Vagia Chouchouli's CV
+description: Vaia Chouchouli's CV
 show_downloads: 'true'
 docs:
   pdf_url: 'docs/CV_Chouchouli Vaia.pdf'
   doc_url: 'docs/CV_Chouchouli Vaia.doc'
-
