--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: 🍱🥬🧀🥩
+title: Food Technologist
 description: Vaia Chouchouli's CV
 show_downloads: 'true'
 docs:
